@@ -1,7 +1,7 @@
 Package: RQuantLib
 Title: R Interface to the QuantLib Library
-Version: 0.3.12.6
-Date: 2014-10-15
+Version: 0.3.12.7
+Date: 2014-10-25
 Maintainer: Dirk Eddelbuettel <edd@debian.org>
 Author: Dirk Eddelbuettel <edd@debian.org> and Khanh Nguyen <knguyen@cs.umb.edu>
 Description: The RQuantLib package makes parts of QuantLib accessible from R
