@@ -1,3 +1,12 @@
+2014-10-25  Dirk Eddelbuettel  <edd@debian.org>
+
+	* inst/unitTests/runit.dates.R: R side of new date conversion tests
+	* inst/unitTests/cpp/dates.cpp: C++ side of new date conversion tests
+
+	* R/unitTest.R: Added new support function unitTestSetup()
+
+	* NAMESPACE: Also import sourceCpp from Rcpp
+
 2014-10-23  Dirk Eddelbuettel  <edd@debian.org>
 
 	* src/dates.cpp (advanceDate): Use a calendar from the RQL context
